   :depth: 1

bzr 2.3b2
#########

:2.3.b2: NOT RELEASED YET

Compatibility Breaks
********************

New Features
************

* Add ``mainline`` revision specifier, which selects the revision that
  merged a specified revision into the mainline.  (Aaron Bentley)

* Add ``annotate`` revision specifier, which selects the revision that
  introduced a specified line of a file.  (Aaron Bentley)

* ``bzr status`` now displays a summary of existing shelves after
  the other status information. This is done using a ``post_status``
  hook.
  (Parth Malwankar, #403687)

Bug Fixes
*********

Improvements
************

Documentation
*************

API Changes
***********

* ``bzrlib.config.IniBasedConfig`` objects now implement
  ``get_options_matching_glob`` and ``get_options_matching_regexp`` that
  permit querying them for matching variables, their values and which
  configuration file define them. (Vincent Ladeuil)

Internals
*********

* When running ``bzr selftest --subunit`` the subunit stream will no
  longer include the "log" information for tests which are considered to
  be 'successes' (success, xfail, skip, etc) (John Arbash Meinel)

Testing
*******



bzr 2.3b1
#########

:2.3b1: 2010-09-20

This is the first beta of the 2.3 series, leading up to a 2.3.0
release in January or February.  Beta releases are suitable for everyday use
but may cause some incompatibilities with plugins.  Some plugins may need
small updates to work with 2.3b1.

2.3b1 includes some performance improvements in both speed and memory
consumption, some preliminary support for generating a texinfo version of
the doc and better support for launchpad.  Many changes were made to make
our test suite more robust as well as numerous documentation fixes.  It
improves the common infrastructure for dealing with colocated named
branches and foreign branches.  We plan to continue with these themes
through the 2.3 series.

It also includes bug fixes for 2.0.6, 2.1.3 and 2.2.1 and over 40 fixes of