@@ -22,6 +22,10 @@ New Features
 * Add ``annotate`` revision specifier, which selects the revision that
   introduced a specified line of a file.  (Aaron Bentley)
 
+* ``bzr config`` is a new command that displays the configuration options
+  for a given directory. It accepts a glob to match against multiple
+  options at once. (Vincent Ladeuil)
+
 * ``bzr status`` now displays a summary of existing shelves after
   the other status information. This is done using a ``post_status``
   hook.
